--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,14 +1,64 @@
 [project]
 name = "dirq"
 version = "0.1.0"
-description = "Add your description here"
+description = "Simple directory-based job queue system"
 readme = "README.md"
 authors = [
     { name = "Vojtech Micka", email = "vojtech@nnaisense.com" }
 ]
 requires-python = ">=3.11"
-dependencies = []
+dependencies = [
+    "filelock>=3.16.1",
+    "pandas>=2.2.3",
+]
+classifiers = [
+    "Development Status :: 3 - Alpha",
+    "Intended Audience :: Developers",
+    "License :: OSI Approved :: MIT License",
+    "Programming Language :: Python :: 3",
+    "Programming Language :: Python :: 3.11",
+]
+
+[project.optional-dependencies]
+dev = [
+    "pytest>=7.0.0",
+    "pytest-cov>=4.1.0",
+    "ruff>=0.1.7",
+    "mypy>=1.7.1",
+]
+
+[project.scripts]
+dirq = "dirq.cli:main"
 
 [build-system]
 requires = ["hatchling"]
 build-backend = "hatchling.build"
+
+[tool.hatch.build]
+packages = ["src/dirq"]
+
+[tool.ruff]
+src = ["src"]
+select = ["E", "F", "I", "N", "W", "B", "Q"]
+ignore = []
+line-length = 120
+target-version = "py311"
+
+[tool.ruff.isort]
+known-first-party = ["dirq"]
+
+[tool.mypy]
+python_version = "3.11"
+strict = true
+warn_return_any = true
+warn_unused_configs = true
+disallow_untyped_defs = true
+
+[tool.pytest.ini_options]
+testpaths = ["tests"]
+addopts = "-v --cov=dirq --cov-report=term-missing"
+
+
+# For src layout
+mypy_path = "src"
+explicit_package_bases = true
