Migrate to Python Project Template

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,51 +1,14 @@
-[project]
-name = "dirq"
-version = "0.1.0"
-description = "Simple directory-based job queue system"
-readme = "README.md"
-authors = [
-    { name = "Vojtech Micka", email = "vojtech@nnaisense.com" }
-]
-requires-python = ">=3.11"
-dependencies = [
-    "filelock>=3.16.1",
-    "pandas>=2.2.3",
-]
-classifiers = [
-    "Development Status :: 3 - Alpha",
-    "Intended Audience :: Developers",
-    "License :: OSI Approved :: MIT License",
-    "Programming Language :: Python :: 3",
-    "Programming Language :: Python :: 3.11",
-]
-
-[project.optional-dependencies]
-dev = [
-    "pytest>=7.0.0",
-    "pytest-cov>=4.1.0",
-    "ruff>=0.1.7",
-    "mypy>=1.7.1",
-]
-
-[project.scripts]
-dirq = "dirq.cli:main"
-
-[build-system]
-requires = ["hatchling"]
-build-backend = "hatchling.build"
-
-[tool.hatch.build]
-packages = ["src/dirq"]
-
 [tool.ruff]
 src = ["src"]
-select = ["E", "F", "I", "N", "W", "B", "Q"]
-ignore = []
 line-length = 120
 target-version = "py311"
 
-[tool.ruff.isort]
-known-first-party = ["dirq"]
+[tool.ruff.lint]
+select = ["E", "F", "I", "N", "W", "B", "Q"]
+ignore = []
+
+[tool.ruff.lint.isort]
+known-local-folder = ["dirq"]
 
 [tool.mypy]
 python_version = "3.11"
@@ -55,10 +18,35 @@ warn_unused_configs = true
 disallow_untyped_defs = true
 
 [tool.pytest.ini_options]
+minversion = "6.0"
+addopts = "-ra --cov=dirq"
 testpaths = ["tests"]
-addopts = "-v --cov=dirq --cov-report=term-missing"
 
+[tool.black]
+line-length = 120
+include = '\.pyi?$'
+extend-exclude = '''
+/(
+  # Exclude files and directories
+  # black will exclude everything in .gitignore by default
+)/
+'''
 
-# For src layout
-mypy_path = "src"
-explicit_package_bases = true
+[tool.isort]
+line_length = 120
+multi_line_output = 3
+include_trailing_comma = true
+known_third_party = ["numpy", "pytest", "torch"]
+known_first_party = ["prime"]
+known_local_folder = "dirq"
+force_grid_wrap = 0
+use_parentheses = true
+
+[tool.setuptools_scm]
+write_to = "src/dirq/__version.py"
+write_to_template = '__version__ = "{version}"'
+fallback_version = "0.0"
+
+[build-system]
+requires = ["setuptools>=42", "wheel", "setuptools_scm[toml]>=3.4"]
+build-backend = "setuptools.build_meta"
