Add the CLI entry point

--- a/setup.cfg
+++ b/setup.cfg
@@ -32,6 +32,11 @@ tests_require =
 install_requires =
     filelock
     pandas
+    rich
+
+[options.entry_points]
+console_scripts =
+    dirq = dirq.cli:main
 
 [options.package_data]
 * = *.txt, *.md, *.rst
