--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -60,6 +60,6 @@ publish_pypi:
     - if: "$CI_COMMIT_TAG =~ /^(0|[1-9]\\d*)\\.(0|[1-9]\\d*)\\.(0|[1-9]\\d*)$/"
   script:
     - uv build
-    - uv publish --index $NN_PYPI_INDEX_URL
+    - uv publish --publish-url $NN_PYPI_INDEX_URL
   after_script:
     - uv cache prune --ci
