--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,10 +1,13 @@
 ---
 variables:
-  UV_VERSION: 0.7.9
+  UV_VERSION: 0.8.5
   PYTHON_VERSION: 3.11
   BASE_LAYER: bookworm-slim
-  UV_LINK_MODE: copy
   UV_CACHE_DIR: ".uv-cache"
+  UV_LINK_MODE: copy
+  UV_PUBLISH_PASSWORD: $CI_JOB_TOKEN
+  UV_PUBLISH_URL: https://codebase.nnaisense.com/api/v4/projects/616/packages/pypi
+  UV_PUBLISH_USERNAME: gitlab-ci-token
 
 stages:
   - test
@@ -59,7 +62,11 @@ publish_pypi:
   rules:
     - if: "$CI_COMMIT_TAG =~ /^(0|[1-9]\\d*)\\.(0|[1-9]\\d*)\\.(0|[1-9]\\d*)$/"
   script:
+    # Install Git
+    - apt-get update
+    - apt-get install -y git
+    # Build and publish package
     - uv build
-    - uv publish --publish-url $NN_PYPI_INDEX_URL
+    - uv publish
   after_script:
     - uv cache prune --ci
