--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,7 +3,7 @@ variables:
   UV_VERSION: 0.8.5
   PYTHON_VERSION: 3.11
   BASE_LAYER: bookworm-slim
-  UV_CACHE_DIR: ".uv-cache"
+  UV_CACHE_DIR: ".uv_cache"
   UV_LINK_MODE: copy
   UV_PUBLISH_PASSWORD: $CI_JOB_TOKEN
   UV_PUBLISH_URL: https://codebase.nnaisense.com/api/v4/projects/616/packages/pypi
