--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,7 +20,7 @@ classifiers = [
     "Topic :: Utilities",
     "Topic :: Scientific/Engineering :: Artificial Intelligence",
 ]
-dependencies = ["filelock>=3.16.1", "pandas>=2.2.3", "rich>=13.9.4"]
+dependencies = ["filelock>=3.16.1", "rich>=13.9.4"]
 
 [project.scripts]
 dirq = "dirq.cli:main"
